src/objects/My_Training__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Category__c</fullName>
        <label>Asset Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Book</fullName>
                </value>
                <value>
                    <fullName>Business Impact</fullName>
                </value>
                <value>
                    <fullName>Challenge Series</fullName>
                </value>
                <value>
                    <fullName>Course</fullName>
                </value>
                <value>
                    <fullName>Job Aid</fullName>
                </value>
                <value>
                    <fullName>SkillBrief</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Id__c</fullName>
        <label>Asset Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Title__c</fullName>
        <label>Asset Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Email__c</fullName>
        <formula>Attendee__r.Email</formula>
        <label>Attendee Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Keep track of the user who is attending a training.</description>
        <label>Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>My_Training</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Duration__c</fullName>
        <label>Call Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificate_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box if a certificate was provided &amp; attach it in the Notes &amp; Attachments section</inlineHelpText>
        <label>Certificate Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <formula>Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Training</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Viewed__c</fullName>
        <label>Date Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Instructor_Name__c</fullName>
        <formula>Course__r.Instructor_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instructor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Training Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Online, live</fullName>
                </value>
                <value>
                    <fullName>OnDemand</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Skillport Ondemand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>Please provide with the course name and a brief description, if you selected &quot;Other&quot; and the course is not mentioned in the list.</inlineHelpText>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presentation_Created_Date__c</fullName>
        <label>Presentation Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presentation_Duration__c</fullName>
        <label>Presentation Duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presentation_Expiration_Date__c</fullName>
        <label>Presentation Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presentation_Folder__c</fullName>
        <label>Presentation Folder</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Id__c</fullName>
        <label>Presentation Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Last_Updated_Date__c</fullName>
        <label>Presentation Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presentation_Title__c</fullName>
        <label>Presentation Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_URL__c</fullName>
        <label>Presentation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Registrant_Id__c</fullName>
        <description>Registrant Key generated by GoToTraining.</description>
        <label>Registrant Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Email__c</fullName>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <label>Sender</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slide_Percent_Viewed__c</fullName>
        <label>Slide (%) Viewed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slide_Viewed__c</fullName>
        <label>Slide Viewed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Duration_Percent_Viewed__c</fullName>
        <label>Total Duration (%) Viewed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Point_Viewed__c</fullName>
        <label>Total Point Viewed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Slide_Percent_Viewed__c</fullName>
        <label>Total Slide (%) Viewed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Slide_Viewed__c</fullName>
        <label>Total Slide Viewed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Region__c</fullName>
        <formula>TEXT( Attendee__r.User_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Duration_Percent__c</fullName>
        <label>View Duration (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_From_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View From Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_IP_Address__c</fullName>
        <label>View IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Key_Id__c</fullName>
        <label>View Key Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Points__c</fullName>
        <label>View Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Score_Percent__c</fullName>
        <label>View Score (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Type__c</fullName>
        <label>View Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_User_Agent__c</fullName>
        <label>View User Agent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewer_Created_Date__c</fullName>
        <label>Viewer Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Viewer_Email__c</fullName>
        <label>Viewer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Viewer_First_Name__c</fullName>
        <label>Viewer First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewer_Info__c</fullName>
        <label>Viewer Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewer_Last_Name__c</fullName>
        <label>Viewer Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewer_Last_Visited__c</fullName>
        <label>Viewer Last Visited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Viewer_Unique_Company_Identifier__c</fullName>
        <label>Viewer Unique Company Identifier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewer_User_Name__c</fullName>
        <label>Viewer User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewer__c</fullName>
        <label>Viewer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewing_Time__c</fullName>
        <label>Viewing Time</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>My Training</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attendee__c</columns>
        <columns>Course__c</columns>
        <columns>Date_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ClassroomSession</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>My_Training__c.ClassroomSession</value>
        </filters>
        <label>Classroom Session</label>
    </listViews>
    <listViews>
        <fullName>OnDemandTraining</fullName>
        <columns>NAME</columns>
        <columns>Date_Completed__c</columns>
        <columns>Date_Viewed__c</columns>
        <columns>Presentation_Created_Date__c</columns>
        <columns>Presentation_Id__c</columns>
        <columns>Registrant_Id__c</columns>
        <columns>Viewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>My_Training__c.BrainsharkTraining</value>
        </filters>
        <label>OnDemand Training</label>
    </listViews>
    <listViews>
        <fullName>OnlineTraining</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>My_Training__c.GoToTraining</value>
        </filters>
        <label>Online Training</label>
    </listViews>
    <listViews>
        <fullName>SkillPort</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>My_Training__c.SkillPort</value>
        </filters>
        <label>SkillPort</label>
    </listViews>
    <listViews>
        <fullName>Webinars</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>My_Training__c.GoToWebinar</value>
        </filters>
        <label>Webinar</label>
    </listViews>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Trainings</pluralLabel>
    <recordTypes>
        <fullName>BrainsharkTraining</fullName>
        <active>true</active>
        <description>This record will be created when user attends any Brainshark Trainings.</description>
        <label>OnDemand Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>ClassroomSession</fullName>
        <active>true</active>
        <description>This record will be created when user attends any ClassroomSession Trainings.</description>
        <label>Classroom Session</label>
    </recordTypes>
    <recordTypes>
        <fullName>GoToTraining</fullName>
        <active>true</active>
        <description>This record will be created when user attends any GoToTraining Trainings.</description>
        <label>Online Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>GoToWebinar</fullName>
        <active>true</active>
        <description>This record will be created when user attends any GoToWebinar Trainings</description>
        <label>Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>SkillPort</fullName>
        <active>true</active>
        <description>This record will be created when user attends any SkillSoft Trainings.</description>
        <label>SkillPort</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Share_With_Attendee__c</fullName>
        <label>Share With Attendee</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Share_With_Manager__c</fullName>
        <label>Share With Manager</label>
    </sharingReasons>
    <validationRules>
        <fullName>Please_provide_Course_details</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Course__r.Name = &quot;Other&quot;, ISBLANK(Other__c ))</errorConditionFormula>
        <errorMessage>Please provide the course name &amp; details in the &quot;Other&quot; field.</errorMessage>
    </validationRules>
</CustomObject>